Reorganize control themes

--- a/src/GUI/ModManager/App.axaml
+++ b/src/GUI/ModManager/App.axaml
@@ -13,9 +13,9 @@
 				<ResourceInclude Source="avares://ModManager/Styling/Resources.axaml" />
 				<ResourceInclude Source="avares://ModManager/Styling/ColorThemes/General.axaml" />
 				<ResourceInclude Source="avares://ModManager/Styling/ColorThemes/Dracula.axaml" />
-				<ResourceInclude Source="avares://ModManager/Styling/FilterButtonExpander.axaml" />
 				<ResourceInclude Source="avares://ModManager/Styling/CompactSukiMenu.axaml" />
-				<ResourceInclude Source="avares://ModManager/Styling/TimePickerFix.axaml" />
+				<ResourceInclude Source="avares://ModManager/Styling/Controls/FilterButtonExpander.axaml" />
+				<!--<ResourceInclude Source="avares://ModManager/Styling/Controls/TimePickerFix.axaml" />-->
 				<ResourceInclude Source="avares://ModManager/Styling/Controls/TimeSpanUpDown.axaml" />
 			</ResourceDictionary.MergedDictionaries>
 
