--- a/src/GUI/ModManager/Windows/SettingsWindow.axaml
+++ b/src/GUI/ModManager/Windows/SettingsWindow.axaml
@@ -10,9 +10,12 @@
     xmlns:view="using:ModManager.Views.Settings"
     xmlns:vm="using:ModManager.ViewModels"
     Title="SettingsWindow"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
+    Width="800"
+    Height="450"
     x:DataType="vm:SettingsWindowViewModel"
+    Focusable="True"
+    Icon="avares://ModManager/Assets/BG3ModManager.ico"
+    Topmost="False"
     mc:Ignorable="d">
 	<Panel>
 		<suki:SukiBackground IsHitTestVisible="False" />
@@ -21,13 +24,13 @@
 				<genview:ModManagerSettingsView x:Name="GeneralSettingsView" />
 			</TabItem>
 			<TabItem Header="Updater" ToolTip.Tip="Update Settings (Data/settings.json)">
-				<genview:ModManagerUpdateSettingsView x:Name="UpdateSettingsView" ViewModel="{Binding UpdateSettings}" />
+				<genview:ModManagerUpdateSettingsView x:Name="UpdateSettingsView" />
 			</TabItem>
 			<TabItem Header="Script Extender" ToolTip.Tip="Script Extender Settings (ScriptExtenderSettings.json)">
-				<genview:ScriptExtenderSettingsView x:Name="ExtenderSettingsView" ViewModel="{Binding ExtenderSettings}" />
+				<genview:ScriptExtenderSettingsView x:Name="ExtenderSettingsView" />
 			</TabItem>
 			<TabItem Header="Script Extender Updater" ToolTip.Tip="Script Extender Updater Settings (ScriptExtenderUpdaterConfig.json)">
-				<genview:ScriptExtenderUpdateConfigView x:Name="ExtenderUpdateSettingsView" ViewModel="{Binding ExtenderUpdaterSettings}" />
+				<genview:ScriptExtenderUpdateConfigView x:Name="ExtenderUpdateSettingsView" />
 			</TabItem>
 			<TabItem Header="Keybindings" ToolTip.Tip="Keybinding Settings (Data/keybindings.json)">
 				<view:KeybindingsView x:Name="KeybindingsView" />
