Rename Editor Project to Toolkit Project

--- a/src/GUI/Desktop-WPF/Themes/MainResourceDictionary.xaml
+++ b/src/GUI/Desktop-WPF/Themes/MainResourceDictionary.xaml
@@ -641,7 +641,7 @@
 					<StackPanel Grid.Column="2" HorizontalAlignment="Right" Orientation="Horizontal">
 						<TextBlock HorizontalAlignment="Right"
 						    Foreground="Lime"
-						    Text="(Editor Project)"
+						    Text="(Toolkit Project)"
 						    Visibility="{Binding IsEditorMod, Converter={StaticResource BoolToVisibilityConverter}, FallbackValue=Collapsed}" />
 						<TextBlock HorizontalAlignment="Right"
 						    Foreground="Orange"
