Lock properties window to mod manager window

--- a/src/GUI/ModManager/Windows/ModPropertiesWindow.axaml
+++ b/src/GUI/ModManager/Windows/ModPropertiesWindow.axaml
@@ -11,6 +11,7 @@
     Width="419"
     Height="550"
     x:DataType="vm:ModPropertiesWindowViewModel"
+    ShowInTaskbar="False"
     mc:Ignorable="d">
 	<Design.DataContext>
 		<vm:DesignModPropertiesWindowViewModel />
