Rename namespace for clarity

--- a/src/GUI/ModManager/Views/Main/ModOrderView.axaml
+++ b/src/GUI/ModManager/Views/Main/ModOrderView.axaml
@@ -1,12 +1,12 @@
 <UserControl x:Class="ModManager.Views.Main.ModOrderView"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:controls="clr-namespace:SukiUI.Controls;assembly=SukiUI"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:mm="using:ModManager"
     xmlns:mv="using:ModManager.Views.Mods"
     xmlns:rxui="http://reactiveui.net"
+    xmlns:sukiControls="clr-namespace:SukiUI.Controls;assembly=SukiUI"
     xmlns:views="using:ModManager.Views.Main"
     xmlns:vm="using:ModManager.ViewModels.Main"
     d:DesignHeight="1080"
@@ -52,10 +52,10 @@
 
 	</UserControl.Styles>
 	<Grid RowDefinitions="auto,*,20">
-		<!--<views:MainCommandBar x:Name="CommandBar" />-->
 		<rxui:ViewModelViewHost x:Name="CommandBar" ViewModel="{x:Static mm:ViewModelLocator.CommandBar}" />
+
 		<Grid Grid.Row="1" Margin="4,0" ColumnDefinitions="*,auto,*">
-			<controls:GlassCard IsOpaque="True">
+			<sukiControls:GlassCard IsOpaque="True">
 				<Grid x:Name="ActiveModsGrid" RowDefinitions="2*,auto,1*">
 					<mv:ModListView x:Name="ActiveModsList"
 					    Grid.Row="0"
@@ -72,15 +72,15 @@
 					    VerticalAlignment="Stretch"
 					    DataContext="{Binding OverrideModsView}" />
 				</Grid>
-			</controls:GlassCard>
+			</sukiControls:GlassCard>
 			<GridSplitter Grid.Column="1"
 			    MinWidth="4"
 			    Margin="0,20"
 			    Classes="splitter2"
 			    ResizeDirection="Columns" />
-			<controls:GlassCard Grid.Column="2" IsOpaque="True">
+			<sukiControls:GlassCard Grid.Column="2" IsOpaque="True">
 				<mv:ModListView x:Name="InactiveModsList" DataContext="{Binding InactiveModsView}" />
-			</controls:GlassCard>
+			</sukiControls:GlassCard>
 		</Grid>
 	</Grid>
 </UserControl>
