--- a/src/GUI/ModManager/Styling/DefaultStyles.axaml
+++ b/src/GUI/ModManager/Styling/DefaultStyles.axaml
@@ -6,6 +6,13 @@
     xmlns:rxui="using:Avalonia.ReactiveUI"
     xmlns:suki="using:SukiUI">
 
+	<Style Selector="Button.icon">
+		<Setter Property="Padding" Value="0" />
+		<Setter Property="Margin" Value="2" />
+		<Setter Property="Width" Value="24" />
+		<Setter Property="Height" Value="24" />
+	</Style>
+
 	<Style Selector="TextBlock">
 		<Setter Property="FontSize" Value="12" />
 		<Setter Property="FontFamily" Value="avares://Avalonia.Fonts.Inter/Assets#Inter" />
